--- a/mky_project/webout/ct/public/lang/standard/simpchn/4004purdaily.json
+++ b/mky_project/webout/ct/public/lang/standard/simpchn/4004purdaily.json
@@ -65,5 +65,6 @@
 	"4004PURDAILY-000063": "选择价格审批单",
 	"4004PURDAILY-000064": "扩展属性",
 	"4004PURDAILY-000065": "单据状态不正确, 不能进行变更！",
-	"4004PURDAILY-000066": "采购合同变更历史"
+  "4004PURDAILY-000066": "采购合同变更历史",
+  "4004PURDAILY-000067": "推送合同成功"
 }
