--- a/mky_project/webout/ct/public/lang/standard/simpchn/4006saledaily.json
+++ b/mky_project/webout/ct/public/lang/standard/simpchn/4006saledaily.json
@@ -89,5 +89,6 @@
 	"4006SALEDAILY-000089": "输入了物料分类范围条件，物料分类编码必输。",
 	"4006SALEDAILY-000090": "输入了物料分类编码条件，物料分类范围必输。",
 	"4006SALEDAILY-000091": "请输入变更原因",
-	"4006SALEDAILY-000092": "请输入变更原因！"
+  "4006SALEDAILY-000092": "请输入变更原因！",
+	"4006SALEDAILY-000093": "推送合同成功"
 }
